istio/DestinationRules/student_destination_rule_canary.yaml
#for client to take request only in tls
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: studentappv1desrule
spec:
  host: studentservice.student.svc.cluster.local
  trafficPolicy: 
    tls:
      mode: ISTIO_MUTUAL
  subsets: 
  - name: v13
    labels: 
      app: studentapp
      version: "v13"
  - name: v14
    labels: 
      app: studentapp
      version: "v14"
